# GiPHouse-Website

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_output.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  coverage.yml  deployment.yaml  linting.yml  testing.yml
SMT/smt_solver_gip/: assigner.py  project_data.py  test_registrations.csv
resources/: security.txt
smt_solver_gip/: assigner.py  assigner2.py  assignment_info.py  colour_codes.py  csv_loader.py  engineer_data.py  flake.nix  project_data.py  projects.txt  projects2.txt  registrations.csv  smt_maker.py  test_registrations.csv
website/: manage.py
website/SAT/: readme.md
website/components/project_card/: component.py  template.html
website/components/semester_projects/: component.py  script.js  template.html
website/courses/: forms.py  models.py  urls.py  views.py
website/courses/migrations/: 0001_initial.py  0002_auto_20191027_1221.py  0003_auto_20210205_1716.py  0004_auto_20220204_1357.py
website/courses/tests/: test_forms.py  test_models.py  test_views.py
website/giphousewebsite/: context_processors.py  menus.py  urls.py  wsgi.py
website/giphousewebsite/settings/: base.py  development.py  production.py
website/giphousewebsite/templates/: base.html  index.html
website/giphousewebsite/templatetags/: menu.py
website/giphousewebsite/tests/: test_models.py
website/github_oauth/: backends.py  links.py  views.py
website/github_oauth/templatetags/: github_tags.py
website/github_oauth/tests/: test_auth_backend.py  test_tags.py  test_views.py
website/lecture_registrations/: models.py  tests.py  urls.py  views.py
website/lecture_registrations/migrations/: 0001_initial.py  0002_initial.py
website/mailing_lists/: admin.py  forms.py  gsuite.py  models.py
website/mailing_lists/migrations/: 0001_initial.py  0002_initial.py
website/mailing_lists/tests/: test_admin.py  test_forms.py  test_gsuite.py  test_models.py
website/projects/: admin.py  apps.py  forms.py  githubsync.py  models.py  urls.py  views.py
website/projects/migrations/: 0001_initial.py  0002_alter_project_options.py  0002_auto_20191107_1344.py  0003_alter_project_unique_together_alter_project_slug.py  0003_auto_20200130_1532.py  0004_auto_20200131_1350.py  0004_project_default_repo_alter_project_slug.py  0005_alter_project_default_repo_alter_project_slug.py  0005_auto_20200614_1943.py  0006_alter_project_unique_together_project_slug_and_more.py  0006_existingrepository_newrepository.py  0007_alter_project_description.py  0008_alter_project_options.py  0008_alter_project_unique_together_alter_project_slug.py  0009_alter_project_options.py  0009_alter_project_unique_together_alter_project_slug.py  0009_existingrepository_newrepository.py  0009_project_default_repo_alter_project_slug.py  0010_alter_project_default_repo_alter_project_slug.py  0010_project_default_repo_alter_project_slug.py  0011_alter_project_default_repo_alter_project_slug.py  0011_merge_20260527_1330.py  0011_merge_20260527_1331.py  0011_merge_20260603_0202.py  0012_existingrepository_newrepository.py
website/projects/tests/: test_admin.py  test_forms.py  test_githubsync.py  test_models.py  test_views.py
website/questionnaires/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
website/questionnaires/migrations/: 0001_initial.py  0002_auto_20191026_2139.py  0002_initial.py  0003_auto_20200525_2158.py  0004_questionnairesubmission_submitted.py  0005_auto_20211019_1657.py  0006_alter_agreementanswerdata_answer_and_more.py
website/questionnaires/tests/: test_admin.py  test_mixins.py  test_models.py  test_views.py
website/registrations/: admin.py  forms.py  team_assignment.py  urls.py  views.py
website/registrations/migrations/: 0001_initial.py  0002_employee_comments.py  0002_registrations_projects.py  0003_registration_education_background.py  0003_registrationsubmission_projects_alter_question_label.py  0004_auto_20200614_1943.py  0004_registrationsubmission_course_alter_question_label.py  0005_alter_question_label.py  0005_auto_20200614_2026.py  0006_auto_20200804_1325.py  0007_registration_available_during_scheduled_timeslot.py  0008_registration_attendance.py  0009_registration_has_problems_with_signing_an_nda.py  0010_rename_available_during_scheduled_timeslot_registration_available_during_scheduled_timeslot_1_and_mo.py  0011_rename_experience_registration_dev_experience_and_more.py  0012_remove_registration_project_registration_projects.py  0013_alter_registration_projects.py  0014_registration_available_during_scheduled_timeslot_10_and_more.py  0015_question_answer_questionchoice_multidata_choicedata_and_more.py  0016_question_max_choices_question_min_choices_and_more.py  0017_alter_question_question_type.py  0017_question_parent_choice_questionchoice_follow_up.py  0017_question_parent_choice_questionchoice_follow_up_and_more.py  0018_alter_question_question_type.py  0019_alter_question_question_type.py  0020_merge_20260403_1338.py  0021_alter_question_question_type.py  0022_merge_20260522_0440.py  0023_alter_question_label_alter_question_question_type.py  0024_alter_question_label.py  0025_alter_registrations_options.py
website/registrations/models/: __init__.py  employee.py  questions.py  registration.py
website/registrations/tests/: test_admin.py  test_models.py  test_team_assignment.py  test_views.py
website/registrations/utils/: sample_registration_form.py
website/room_reservation/: models.py  urls.py  views.py
website/room_reservation/migrations/: 0001_initial.py  0002_room_special_availability.py
website/room_reservation/tests/: test_api.py
website/smt_solver_gip/: assigner.py  assignment_info.py  engineers.csv
website/tasks/: admin.py  models.py
website/tasks/migrations/: 0001_initial.py  0002_task_logs.py  0003_alter_task_logs.py  0004_task_status_alter_task_completed_alter_task_fail_and_more.py  0005_task_date_alter_task_data.py  0006_remove_task_date_alter_task_logs.py  0007_alter_task_logs.py  0008_alter_task_logs.py  0009_alter_task_logs.py  0010_alter_task_logs.py
(+21 files in other folders)
