[project]
name = "giphousewebsite"
version = "1.0.0"
description = "GiPHouse website based on Django Framework"
authors = [
    { name = "joren485" },
    { name = "pingiun" },
    { name = "keukentrap" },
    { name = "adiehl96" },
    { name = "Pegasystem" },
    { name = "BierBrigadier" },
    { name = "avanderjagt" },
    { name = "mennobartels" },
    { name = "AJKruijsse" },
    { name = " JelmerHinssen" },
    { name = "JobDoesburg" },
    { name = " yhogewind" },
    { name = "lukovdm" },
]
requires-python = ">=3.14"
license = "AGPL-3.0-only"
dependencies = [
    "Django>=6.0",
    "requests>=2.32.5",
    "libsass>=0.23.0",
    "django-compressor>=4.6",
    "django-sass-processor>=1.4.2",
    "Pillow>=12.0.0",
    "django-admin-autocomplete-filter",
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "pygithub>=2.8.1",
    "cryptography>=38.0.3",
    "ortools>=9.15.6755",
    "PyGithub>=2.8.1",
    "admin-totals>=1.0.1",
    "django-bootstrap5>=26.2",
    "django-easy-admin-object-actions>=1.1.0",
    "django-tinymce>=5.0.0",
    "django-bleach>=3.1.0",
    "gunicorn",
]

[project.optional-dependencies]
production = [
    "psycopg2-binary>=2.9.3",
    "gunicorn",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-import-order>=0.19.2",
    "coverage[toml]>=6.5.0",
    "pydocstyle>=6.3.0",
    "freezegun>=1.5.5",
    "Faker>=40.4.0",
    "black>=26.1.0",
    "ruff>=0.15.2",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
django-admin-autocomplete-filter = { git = "https://github.com/farhan0581/django-admin-autocomplete-filter.git", branch = "pre_release" }

[tool.black]
line-length = 79
target-version = ["py314"]
exclude = '''
/(
  migrations
  | website/giphousewebsite/settings
  .venv
)/
'''

[tool.coverage.run]
branch = true
source = ["website"]
omit = ["website/manage.py", "website/giphousewebsite/wsgi.py", "website/*/migrations/*", "website/*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100.0
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

