[project]
name = "giphousewebsite"
version = "2.0.1-alpha.2"
description = "GiPHouse website based on Django Framework"
authors = [
    { name = "joren485" },
    { name = "pingiun" },
    { name = "keukentrap" },
    { name = "adiehl96" },
    { name = "Pegasystem" },
    { name = "BierBrigadier" },
    { name = "avanderjagt" },
    { name = "mennobartels" },
    { name = "AJKruijsse" },
    { name = " JelmerHinssen" },
    { name = "JobDoesburg" },
    { name = " yhogewind" },
    { name = "lukovdm" },
    { name = "daanwintjes" },
    { name = "oli4-004" },
    { name = "Sverre7567" },
    { name = "Daniel-Chou24" },
    { name = "vinti17" },
    { name = "durned" },
    { name = "Sjensie" },
    { name = "HallowedByMyName" },
]
requires-python = ">=3.14"
license = "AGPL-3.0-only"
dependencies = [
    "Django>=6.0",
    "requests>=2.32.5",
    "libsass>=0.23.0",
    "django-compressor>=4.6",
    "django-sass-processor>=1.4.2",
    "Pillow>=12.0.0",
    "django-admin-autocomplete-filter>=0.7.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "cryptography>=38.0.3",
    "ortools>=9.15.6755",
    "PyGithub>=2.8.1",
    "admin-totals>=1.0.1",
    "django-bootstrap5>=26.2",
    "django-easy-admin-object-actions>=1.1.0",
    "django-tinymce>=5.0.0",
    "django-bleach>=3.1.0",
    "django-nested-admin>=4.1.6",
    "gunicorn>=25.3.0",
    "django-components>=0.148.0",
]

[project.optional-dependencies]
production = [
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.3",
]

[dependency-groups]
dev = [
    "coverage[toml]>=6.5.0",
    "pydocstyle>=6.3.0",
    "freezegun>=1.5.5",
    "Faker>=40.4.0",
    "ruff>=0.15.2",
]

[tool.uv]
package = false
default-groups = "all"


[tool.black]
line-length = 79
target-version = ["py314"]
exclude = '''
/(
  migrations
  | website/giphousewebsite/settings
  .venv
)/
'''

[tool.coverage.run]
branch = true
source = ["website"]
omit = ["website/manage.py", "website/giphousewebsite/wsgi.py", "website/*/migrations/*", "website/*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100.0

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "website/giphousewebsite/settings/",
    "website/registrations/models/__init__.py",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pycodestyle]
max-line-length = 79


